# deepTools

./: .gitignore  .planemo.sh  .readthedocs.yaml  Cargo.toml  deeptools4.0.0_changes.md  pyproject.toml
.github/workflows/: cargo_test.yml  maturin_builds.yml  test.yml
docs/: index.rst
galaxy/wrapper/: alignmentSieve.xml  bamCompare.xml  bamCoverage.xml  bamPEFragmentSize.xml  bigwigAverage.xml  bigwigCompare.xml  computeGCBias.xml  computeMatrix.xml  computeMatrixOperations.xml  correctGCBias.xml  deepTools_macros.xml  estimateReadFiltering.xml  multiBamSummary.xml  multiBigwigSummary.xml  plotCorrelation.xml  plotCoverage.xml  plotEnrichment.xml  plotFingerprint.xml  plotHeatmap.xml  plotPCA.xml  plotProfiler.xml
galaxy/wrapper/test-data/: alignmentSieve.bam  alignmentSieve2.bam  alignmentSieve3.bam  bamCompare_result2.bw  correctGCBias_result1.bam  coverage_filtered.bg  multiBamSummary_result1.npz  multiBamSummary_result2.npz  multiBigwigSummary_result1.npz  multiBigwigSummary_result2.npz
pydeeptools/deeptools/: alignmentSieve2.py  bamCompare2.py  bamCoverage.py  bamCoverage2.py  computeMatrix.py  computeMatrix2.py  mapReduce.py  multiBamSummary2.py  writeBedGraph.py
pydeeptools/deeptools/test/: test_alignmentseive.py  test_bamCoverage_and_bamCompare.py  test_bamPEFragmentSize.py  test_computeMatrix.py  test_correctGCBias.py  test_plotEnrichment.py  test_plotPCA.py  (+1 more)
src/: alignmentsieve.rs  bamcompare.rs  bamcoverage.rs  bamhandler.rs  calc.rs  compute.rs  computematrix.rs  covcalc.rs  filehandler.rs  lib.rs  multibamsummary.rs  normalization.rs  test.rs
(+4 files in other folders)
